--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192.svg" />
     <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#6366F1" />
+    <meta name="theme-color" content="#111827" id="theme-color-meta" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#111827" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#111827" />
     <meta name="description" content="Ticket scanning application for 263tickets.com events" />
     
     <!-- PWA Meta Tags -->
@@ -17,7 +19,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="263tickets" />
     <meta name="application-name" content="263tickets Scanner" />
-    <meta name="msapplication-TileColor" content="#6366F1" />
+    <meta name="msapplication-TileColor" content="#111827" />
+    <meta name="msapplication-navbutton-color" content="#111827" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="format-detection" content="telephone=no" />
     
