--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192.svg" />
     <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#111827" id="theme-color-meta" />
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#111827" />
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#111827" />
+    <meta name="theme-color" id="theme-color-meta" content="#111827" />
     <meta name="description" content="Ticket scanning application for 263tickets.com events" />
     
     <!-- PWA Meta Tags -->
