--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/icons/icon-192.svg" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.svg" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192.svg" />
+    <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" id="theme-color-meta" content="#FFFFFF" />
     <meta name="description" content="Ticket scanning application for 263tickets.com events" />
@@ -47,7 +45,7 @@
     <meta name="format-detection" content="telephone=no" />
     
     <!-- iOS Splash Screens -->
-    <link rel="apple-touch-startup-image" href="/icons/icon-512.png" />
+    <link rel="apple-touch-startup-image" href="/icons/icon-512.svg" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
