Fix status bar color to match app header

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" id="theme-color-meta" content="#FFFFFF" />
+    <meta name="apple-mobile-web-app-status-bar-style" id="apple-status-bar-style" content="default" />
     <meta name="description" content="Ticket scanning application for 263tickets.com events" />
     
     <!-- PWA Meta Tags -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="263tickets" />
     <meta name="application-name" content="263tickets Scanner" />
     <meta name="msapplication-TileColor" content="#111827" />
