--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" id="theme-color-meta" content="#FFFFFF" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" id="theme-color-meta" content="#00007c" />
     <meta name="description" content="Ticket scanning application for 263tickets.com events" />
     
     <!-- PWA Meta Tags -->
