--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <title>263tickets Scanner</title>
   </head>
   <body>
+    <a href="#main" class="skip-link">Skip to content</a>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
