--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" id="theme-color-meta" content="#FFFFFF" />
+    <meta name="theme-color" content="#00007c" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <meta name="theme-color" id="theme-color-meta" content="#00007c" />
     <meta name="description" content="Ticket scanning application for 263tickets.com events" />
     
     <!-- PWA Meta Tags -->
@@ -22,8 +21,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="263tickets" />
     <meta name="application-name" content="263tickets Scanner" />
-    <meta name="msapplication-TileColor" content="#111827" />
-    <meta name="msapplication-navbutton-color" content="#111827" />
+    <meta name="msapplication-TileColor" content="#00007c" />
+    <meta name="msapplication-navbutton-color" content="#00007c" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="format-detection" content="telephone=no" />
     
